# GrpcClientServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/client/core/: CMakeLists.txt
src/client/core/impl/: client.cpp
src/client/core/include/: client.h
src/client/core/proto/: v1.grpc.pb.cc
src/proto/: CMakeLists.txt  v1.proto
src/server/: CMakeLists.txt  main.cpp
src/server/core/: CMakeLists.txt
src/server/core/impl/: server.cpp
src/server/core/include/: server.h
src/server/core/proto/: v1.grpc.pb.h  v1.pb.cc  v1.pb.h
